tests/pool/fail105b.err
Syntax error at line 2 of input. Parser
