tests/pool/fail105b.java
// PA1 lex id pass
class not_main{}
class Class {public static void main(String[] args){{}}}

